force-app/main/default/objects/Loyalty_Exclusion_Rule__mdt/Loyalty_Exclusion_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines cart-line exclusion rules for points accrual. Lines matching an active rule are flagged isExcluded=true by LoyaltyTransactionService before submitting the transaction journal to LC.</description>
    <label>Loyalty Exclusion Rule</label>
    <pluralLabel>Loyalty Exclusion Rules</pluralLabel>
</CustomObject>