force-app/main/default/objects/Loyalty_Exclusion_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Inactive rules are skipped by LoyaltyCartEvaluationService.getExclusionRules().</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>