force-app/main/default/objects/Loyalty_Exclusion_Rule__mdt/fields/Program_Config__c.field-meta.xml
<CustomField>
    <fullName>Program_Config__c</fullName>
    <description>Links this exclusion rule to a specific Loyalty_Program_Config__mdt record.</description>
    <label>Program Config</label>
    <referenceTo>Loyalty_Program_Config__mdt</referenceTo>
    <relationshipLabel>Exclusion Rules</relationshipLabel>
    <relationshipName>Exclusion_Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>