force-app/main/default/objects/Loyalty_Exclusion_Rule__mdt/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>The dimension on which exclusion is applied: product category, product SKU, or brand.</description>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Category</fullName><default>false</default><label>Category</label></value>
            <value><fullName>SKU</fullName><default>false</default><label>SKU</label></value>
            <value><fullName>Brand</fullName><default>false</default><label>Brand</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>