force-app/main/default/objects/Loyalty_Exclusion_Rule__mdt/fields/Rule_Value__c.field-meta.xml
<CustomField>
    <fullName>Rule_Value__c</fullName>
    <description>The specific value to match against CartLineItem.category, productId, or brand. Case-insensitive comparison in Apex.</description>
    <label>Rule Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>